<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">LISNx</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="login">Log in</string>
    <string name="createAccount">Create Account</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="loginText">Login</string>
    <string name="register">Register</string>
    <string name="lodingMessage">Loading...</string>
    <string name="authenticateUser">Verifying credentials...</string>
    <string name="registerUser">Registering...</string>
    <string name="createLisn">Creating LISN...</string>
    <string name="logoutUser">Please wait...</string>
    <string name="joinLisn">Joining...</string>
    <string name="lisnIconText">LISNs</string>
    <string name="profileIconText">Profile</string>
    <string name="settingsIconText">Settings</string>
    <string name="aboutUsIconText">About</string>
    <string name="name">Name:</string>
    <string name="dateOfBirth">Date of Birth:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="cancel">Cancel</string>
    <string name="now">Now</string>
    <string name="create">Create</string>
    <string name="past">Past</string>
    <string name="tryGetLocation">Trying to get your current location.</string>
    <string name="description">Description:</string>
    <string name="endDateAndTime">End Date &amp; Time:</string>
    <string name="lisnListHeader">LISNs:</string>
    <string name="profileText">Profile</string>
    <string name="save">Save</string>
    <string name="facebook">Facebook</string>
    <string name="linkedIn">LinkedIn</string>
    <string name="settingsText">Settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="locationShare">Location Share</string>
    <string name="wall">Wall</string>
    <string name="connect">Connect</string>
    <string name="lisnxNameText">|Connect instantly with people you meet|</string>
    <string name="punchLineText">   Connect with people you meet.</string>
    <string name="versionText">v1.0.0 Public Beta</string>
    <string name="join">Joining...</string>
    <string name="share">Share On:</string>
    <string name="completeProfile">Complete</string>
    <string name="casualProfile">Casual</string>
    <string name="professionalProfile">Professional</string>
    <string name="emailOnlyProfile">Email Only</string>
    <string name="submit">Submit</string>
    <string name="changePassword">Change password</string>
    <string name="changingPassword">Changing Password...</string>
    <string name="friendsText">Friends</string>
    <string name="pendingText">Your connection request is pending.</string>
    <string name="profileNotification">has sent you a connection request.</string>
    <string name="noLisnText">No LISNs nearby.</string>
    <string name="noPastLisnText">No past LISNs.</string>
    <string name="sendingRequest">Sending request...</string>
    <string name="acceptingRequest">Accepting request...</string>
    <string name="ignoringRequest">Ignoring request...</string>
    <string name="uploadImageText">Upload your image:</string>
    <string name="textForCommonLisns">LISNs in common</string>
    <string name="textForCommonFriends">Connections in common</string>
    <string name="lisnersNearby">People nearby</string>
    <string name="lisners">People</string>
    <string name="messages">Messages</string>
    <string name="friendRequests">Messages</string>
    <string name="unreadMessages">Messages</string>
    <string name="friends">Friends</string>
    <string name="commonFriends">Common Friends</string>
    <string name="commonLisns">Common LISNs</string>
    <string name="startDate">Start:</string>
    <string name="endDate">End:</string>
    <string name="postingMessage">Posting message...</string>
    <string name="noFriendRequestText">No new connection requests.</string>
    <string name="noMessageNotificationText">No messages.</string>
    <string name="noPeopleNearbyText">No users nearby, check back later.</string>
    <string name="noFriendsYetText">You have no connections yet.</string>
    <string name="noCommonFriendsYetText">You have no common connections yet.</string>
    <string name="noCommonLisnsYetText">You have no common LISNs yet.</string>
    <string name="enterYourEmailText">Please enter your email address to receive temporary password.</string>
    <string name="enterIdHere">Your e-mail id here..</string>
    <string name="chooseProfileShareTypeText">Please choose profile options to share.</string>
    <string name="sendingEmail">Sending email id...</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="inviteFacebookFriends">Invite</string>
    <string name="inviteLinkedinConnections">Invite</string>
    <string name="usingTemporaryPassword">You have logged in using temporary password.Please reset your password.</string>
    <string name="connectOnText">Connect On:</string>
    <string name="loginWith">Login with:</string>
    <string name="retryText">Retry</string>
    <string name="noInternetWarning">Please check your internet connection.</string>
    <string name="addProfileText">Add Profiles</string>
    <string name="disablingNetwork">Disabling Network...</string>
    <string name="app_id">164116363623152</string> 
    <!-- Vish 243183695868465 --> 
    
<!--     <string name="app_id">692664994130393</string>  --><!-- maurizio id -->
    <string name="title_activity_social_wizard">SocialWizard</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
