<?xml version="1.0" encoding="utf-8"?>

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:androidsam="http://schemas.android.com/apk/res/com.jameselsey"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		style="@style/outerBackground" android:orientation="vertical">
		
	    <ScrollView 
			android:id="@+id/scrollLoginXml" android:scrollbarSize="3dip"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:fillViewport="true" android:fadingEdge="none">

		<LinearLayout 
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content">

  			<ImageView android:id="@+id/lisnx_login_logo"
				android:layout_marginTop="20dp" android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
				android:src="@drawable/lisnx_logo" />   

			<TextView 
				android:id="@+id/lisnxFullname" 
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" style="@style/mediumText"
				android:text="@string/lisnxNameText" />

			<EditText android:id="@+id/emailLogin" android:layout_marginTop="10dp"
				android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:inputType="textEmailAddress" android:hint="@string/email"
				android:textColorHint="#3b64a8">
			</EditText>

			<EditText android:id="@+id/passwordLogin"
				android:layout_marginTop="10dp" android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:password="true"
				android:hint="@string/password"
				android:textColorHint="#3b64a8">
			</EditText>
			
			<TextView android:id="@+id/forgotPasswordText" 
			  	android:layout_gravity="right" android:layout_marginTop="5dip"
			  	android:layout_marginRight="5dip" android:layout_marginBottom="5dip"
			  	android:layout_width="wrap_content" android:layout_height="wrap_content" 
			  	android:text="@string/forgotPassword" style="@style/mediumText" />

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal">
			
		    <ImageButton android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
				android:background="@drawable/ic_register"
				android:layout_height="wrap_content" android:id="@+id/registerOrangeButton" />
			
		    <ImageButton android:layout_width="wrap_content"
				android:background="@drawable/ic_login" android:layout_gravity="center_horizontal"
				android:layout_height="wrap_content" android:id="@+id/loginButton" />
		    
		</LinearLayout>
		</LinearLayout>
		</ScrollView>
	</RelativeLayout>

