<?xml version="1.0" encoding="utf-8"?>

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		style="@style/outerBackground" android:orientation="vertical">
		
	    <ScrollView 
			android:id="@+id/scrollLoginXml" android:scrollbarSize="3dip"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:fillViewport="true" android:fadingEdge="none">

		<LinearLayout 
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content">

  			<ImageView android:id="@+id/lisnx_login_logo"
				android:layout_marginTop="30dp" android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal|center_vertical" android:layout_height="wrap_content"
				android:src="@drawable/lisnx_logo" />   

			<TextView 
				android:id="@+id/lisnxFullname" android:layout_marginTop="0dp"
				android:layout_marginRight="10dp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center" style="@style/mediumText"
				android:text="@string/lisnxNameText" />

			<EditText android:id="@+id/emailLogin" android:layout_marginTop="10dp"
				android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:inputType="textEmailAddress" android:hint="@string/email"
				android:textColorHint="#3b64a8" android:visibility="gone">
			</EditText>

			<EditText android:id="@+id/passwordLogin"
				android:layout_marginTop="10dp" android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:password="true"
				android:hint="@string/password" 
				android:visibility="gone"
				android:textColorHint="#3b64a8">
			</EditText>
			
			

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent" android:layout_marginRight="5dp"
			android:layout_height="wrap_content" android:gravity="right" android:visibility="gone">
			
		    <ImageButton android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
				android:background="@drawable/ic_register"
				android:layout_height="wrap_content" android:id="@+id/registerOrangeButton" />
			
		    <ImageButton android:layout_width="wrap_content"
				android:background="@drawable/ic_login" android:layout_gravity="center_horizontal"
				android:layout_height="wrap_content" android:id="@+id/loginButton" />
		</LinearLayout>
		<TextView android:id="@+id/forgotPasswordText" android:visibility="gone"
			  	android:layout_gravity="right" android:layout_marginTop="0dip"
			  	android:layout_marginRight="5dip" android:layout_marginBottom="5dip"
			  	android:layout_width="wrap_content" android:layout_height="wrap_content" 
			  	android:text="@string/forgotPassword" style="@style/mediumText" />

		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/socialButtonsLayout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal|center"
		    android:layout_marginTop="80dip"
		    android:layout_marginRight="5dp"
		    android:gravity="center_vertical|center_horizontal"
		    android:orientation="horizontal"
		    android:visibility="visible">
		    
		    
		    <com.facebook.widget.LoginButton
		            android:id="@+id/login_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:layout_marginTop="30dp"
		            android:layout_marginBottom="30dp" />

			<TextView
			    android:id="@+id/loginWithText"
			    style="@style/mediumText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="3dip"
			    android:layout_marginRight="3dip"
			    android:text="@string/loginWith"
			    android:visibility="gone" /> 
		    
		    	<ImageView android:id="@+id/loginFacebookImage" android:visibility="gone"
		        	android:layout_gravity="center_vertical|center_horizontal" 
					android:layout_width="wrap_content" android:layout_height="wrap_content" 
					android:layout_marginLeft="0dip" android:src="@drawable/facebook_m"/>
		    	
		    	<ImageView android:id="@+id/profileLinkedInImage" android:visibility="gone"
		        	android:layout_gravity="center_vertical|center_horizontal" 
					android:layout_width="wrap_content" android:layout_height="wrap_content" 
					android:layout_marginLeft="10dip" android:src="@drawable/ic_linked_on">
		    	</ImageView>
		    
		    	<ImageView android:id="@+id/profileTwitterImage" android:visibility="gone"
		        	android:layout_gravity="center_vertical|center_horizontal" 
					android:layout_width="wrap_content" android:layout_height="wrap_content" 
					android:layout_marginLeft="10dip" android:src="@drawable/ic_twitter_on">
		    	</ImageView>
		    </LinearLayout>
		    <TextView 
				android:id="@+id/versionNo" 
				android:layout_marginRight="10dp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center" style="@style/mediumText"
				android:layout_marginTop="80dp" />
		  

		
		
		</LinearLayout>
			
		</ScrollView>
	</RelativeLayout>

