<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:androidsam="http://schemas.android.com/apk/res/com.jameselsey"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	style="@style/background" android:orientation="vertical">
	
    <include android:id="@+id/main_header" android:layout_width="fill_parent"
		android:layout_height="wrap_content" layout="@layout/register_header" />
	
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollLoginXml" android:scrollbarSize="3dip"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:fillViewport="true" android:fadingEdge="none">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_gravity="center_horizontal|center"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
				
			    <EditText android:id="@+id/nameField"
						android:layout_gravity="center_vertical|center_horizontal"
						android:layout_height="wrap_content" android:layout_width="fill_parent"
						android:layout_marginRight="5dip" android:layout_marginLeft="5dip"
						android:layout_marginTop="25dip" android:hint="@string/name" 
						android:textColorHint="#3b64a8" android:inputType="textCapWords">
				</EditText>
				
			    <EditText android:id="@+id/emailField"
						android:layout_gravity="center_vertical|center_horizontal"
						android:layout_height="wrap_content" android:layout_width="fill_parent"
						android:layout_marginRight="5dip" android:layout_marginLeft="5dip"
						android:layout_marginTop="10dip" android:hint="@string/email"
						android:textColorHint="#3b64a8" android:inputType="textEmailAddress">
				</EditText>
				
			    <EditText android:id="@+id/passwordField"
						android:layout_gravity="center_vertical|center_horizontal" android:hint="@string/password"
						android:password="true" android:layout_height="wrap_content"
						android:layout_width="fill_parent" android:layout_marginRight="5dip"
						android:layout_marginLeft="5dip" android:layout_marginTop="10dip"
						android:textColorHint="#3b64a8" >
				</EditText>
				
			    <EditText android:id="@+id/confirmPasswordField"
						android:layout_gravity="center_vertical|center_horizontal" android:hint="@string/confirmPassword"
						android:password="true" android:layout_height="wrap_content"
						android:layout_width="fill_parent" android:layout_marginRight="5dip"
						android:layout_marginLeft="5dip" android:layout_marginTop="10dip"
						android:textColorHint="#3b64a8">
				</EditText>
				
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/profileedit4" 
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_marginTop="15dip">
		
		    	<ImageView android:id="@+id/userRegisterImage" 
					android:layout_width="wrap_content" android:layout_height="wrap_content" 
				    android:src="@drawable/ic_place_holder" android:layout_marginLeft="10dip">
		    	</ImageView>
		    	
		    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="center_horizontal|center" android:orientation="vertical"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginTop="0dip">
			    
		    	    <TextView
		      			android:id="@+id/uploadPictureText" 
		      			android:layout_gravity="center_vertical|center_horizontal"
		     			android:layout_height="wrap_content" android:layout_width="wrap_content"
		     			style="@style/fieldText" android:text="@string/uploadImageText">
					</TextView>	
		    	
		    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="center_horizontal|center" android:orientation="horizontal"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginTop="10dip" >
						
					<ImageButton android:id="@+id/takePicture"
						android:layout_height="wrap_content" android:layout_width="wrap_content"
						android:layout_gravity="center_horizontal" 
						android:background="@drawable/ic_capture"  />
					
					<ImageButton android:id="@+id/uploadPicture" 
						android:layout_height="wrap_content" android:layout_width="wrap_content"
						android:layout_marginLeft="5dip"
						android:layout_gravity="center_horizontal" android:background="@drawable/ic_upload" /> 
					
				</LinearLayout>	
		    </LinearLayout>
		</LinearLayout>
		
		<View
	  		android:layout_marginTop="15dip"
     		android:layout_width="wrap_content"
      		android:layout_marginLeft="0dp"
      		android:layout_marginRight="0dp"
      		android:background="@drawable/white_line"
      		android:layout_height="1dp" />
		    
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_gravity="center_horizontal|center" 
			android:orientation="horizontal" android:layout_marginTop="10dip"
			android:layout_width="wrap_content" android:layout_height="fill_parent">

			<ImageButton android:id="@+id/cancelButton"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:background="@drawable/ic_cancel" />
			
			<ImageButton android:id="@+id/registerBlueButton"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:background="@drawable/ic_register_blue" />
		</LinearLayout>
	</LinearLayout>
 </ScrollView>
</LinearLayout>