<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:androidsam="http://schemas.android.com/apk/res/com.jameselsey"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	style="@style/background" android:orientation="vertical">
	
    <include android:id="@+id/main_header" android:layout_width="fill_parent"
		android:layout_height="wrap_content" layout="@layout/back_header" />
	
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/scrollLoginXml" android:scrollbarSize="3dip"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:fillViewport="true" android:fadingEdge="none">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/profileedit" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<!-- <include android:id="@+id/image_name_strip"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				layout="@layout/image_name_holder" android:layout_marginTop="5dip"/> -->
			
			<TextView android:id="@+id/resetPasswordText" 
			  	android:layout_gravity="center_horizontal" android:layout_marginTop="15dip"
			  	android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
			  	android:layout_width="wrap_content" android:layout_height="wrap_content" 
			  	android:text="@string/usingTemporaryPassword" style="@style/fieldText"
			  	android:visibility="gone" />
			
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_gravity="center_horizontal|center"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
		    	
			    <EditText
		      			android:id="@+id/passwordField" 
		      			android:layout_gravity="center_vertical|center_horizontal" android:password="true"
		      			android:layout_height="wrap_content" android:layout_width="fill_parent"
		      			android:layout_marginRight="5dip" android:layout_marginLeft="5dip"
		      			android:layout_marginTop="15dp" android:hint="@string/password"
		      			android:textColorHint="#3b64a8">
				</EditText>	
				
			    <EditText
		      			android:id="@+id/confirmPasswordField" 
			  			android:layout_gravity="center_vertical|center_horizontal" android:password="true"
		      			android:layout_height="wrap_content" android:layout_width="fill_parent"
		      			android:layout_marginRight="5dip" android:layout_marginLeft="5dip"
		      			android:layout_marginTop="10dp" android:hint="@string/confirmPassword"
		      			android:textColorHint="#3b64a8">
				</EditText>	
				
			</LinearLayout>
			
				<View
	  				android:layout_marginTop="20dip"
     				android:layout_width="wrap_content"
      				android:layout_marginLeft="0dp"
      				android:layout_marginRight="0dp"
      				android:background="@drawable/white_line"
      				android:layout_height="1dp" />
		
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_gravity="center_horizontal|center"
				android:layout_width="wrap_content" android:layout_height="fill_parent">

				<ImageButton android:id="@+id/cancelButton"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:background="@drawable/ic_cancel" />
				
				<ImageButton android:id="@+id/saveButton"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:background="@drawable/ic_save" />

			</LinearLayout>
		
		</LinearLayout>
	</ScrollView>
</LinearLayout>
		